[gd_scene load_steps=32 format=3 uid="uid://cdy1djfjbjlnq"]

[ext_resource type="Script" path="res://level1.gd" id="1_cshpo"]
[ext_resource type="Texture2D" uid="uid://bxcbc5qsk405d" path="res://img/classroom/level1/math.png" id="2_jq24g"]
[ext_resource type="FontFile" uid="uid://crprl3g8een26" path="res://ttf/Nunito-SemiBold.ttf" id="3_o0fe0"]
[ext_resource type="Texture2D" uid="uid://ny2654qfkyxt" path="res://img/door_sprite/0001.png" id="6_2w71s"]
[ext_resource type="Texture2D" uid="uid://dpdgunc7krdh8" path="res://img/door_sprite/0003.png" id="7_wwq45"]
[ext_resource type="Texture2D" uid="uid://ctg3m0v8dt66n" path="res://img/door_sprite/0005.png" id="8_aug38"]
[ext_resource type="Texture2D" uid="uid://bbou5vuwqgy0l" path="res://img/door_sprite/0007.png" id="9_aaclb"]
[ext_resource type="Texture2D" uid="uid://dcjmm7hk8jmrs" path="res://img/door_sprite/0009.png" id="10_0bo13"]
[ext_resource type="Texture2D" uid="uid://bt70or0wi1j4c" path="res://img/door_sprite/0011.png" id="11_cpwdi"]
[ext_resource type="Texture2D" uid="uid://b5de52io4u8r8" path="res://img/door_sprite/0013.png" id="12_g1f2r"]
[ext_resource type="Texture2D" uid="uid://cni16njg865xh" path="res://img/door_sprite/0015.png" id="13_0jxb0"]
[ext_resource type="Texture2D" uid="uid://dxdnqejkghdcw" path="res://img/door_sprite/0017.png" id="14_p1xjg"]
[ext_resource type="Texture2D" uid="uid://c6mc15md40ka3" path="res://img/door_sprite/0019.png" id="15_ebacg"]
[ext_resource type="Texture2D" uid="uid://no4gyu1l1aa0" path="res://img/door_sprite/0021.png" id="16_wvw7r"]
[ext_resource type="Texture2D" uid="uid://cy7xkxxef1auc" path="res://img/door_sprite/0023.png" id="17_ctjmm"]
[ext_resource type="Texture2D" uid="uid://c8p8dfyldooj5" path="res://img/door_sprite/0025.png" id="18_stvvp"]
[ext_resource type="Texture2D" uid="uid://b7egwv6uk544l" path="res://img/sound_off.png" id="19_juorv"]
[ext_resource type="Texture2D" uid="uid://b7ohdiwfwgyfe" path="res://img/door_sprite/0027.png" id="19_scrw8"]
[ext_resource type="Texture2D" uid="uid://boefk5pefappt" path="res://img/sound_on.png" id="20_173yw"]
[ext_resource type="Texture2D" uid="uid://cg2ondtvdkj2g" path="res://img/door_sprite/0029.png" id="20_r34k4"]

[sub_resource type="Animation" id="Animation_bnfq3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/AnimatedScene:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_udo73"]
resource_name = "move_to_blackboard"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/AnimatedScene:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.24616, 1.24616)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qpxhq"]
_data = {
"RESET": SubResource("Animation_bnfq3"),
"move_to_blackboard": SubResource("Animation_udo73")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2tyta"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wd4kb"]

[sub_resource type="ViewportTexture" id="ViewportTexture_26cmn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5qagh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7pa3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i0ksj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_2w71s")
}, {
"duration": 1.0,
"texture": ExtResource("7_wwq45")
}, {
"duration": 1.0,
"texture": ExtResource("8_aug38")
}, {
"duration": 1.0,
"texture": ExtResource("9_aaclb")
}, {
"duration": 1.0,
"texture": ExtResource("10_0bo13")
}, {
"duration": 1.0,
"texture": ExtResource("11_cpwdi")
}, {
"duration": 1.0,
"texture": ExtResource("12_g1f2r")
}, {
"duration": 1.0,
"texture": ExtResource("13_0jxb0")
}, {
"duration": 1.0,
"texture": ExtResource("14_p1xjg")
}, {
"duration": 1.0,
"texture": ExtResource("15_ebacg")
}, {
"duration": 1.0,
"texture": ExtResource("16_wvw7r")
}, {
"duration": 1.0,
"texture": ExtResource("17_ctjmm")
}, {
"duration": 1.0,
"texture": ExtResource("18_stvvp")
}, {
"duration": 1.0,
"texture": ExtResource("19_scrw8")
}, {
"duration": 1.0,
"texture": ExtResource("20_r34k4")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fabrv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gx23d"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_cshpo")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qpxhq")
}

[node name="AnimatedScene" type="Control" parent="AnimationPlayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1920.0
offset_top = -1080.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1920, 1080)
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="AnimationPlayer/AnimatedScene"]
position = Vector2(1920, 1080)
texture = ExtResource("2_jq24g")
metadata/_edit_lock_ = true

[node name="MainMenu" type="Button" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 2872.0
offset_top = 492.0
offset_right = 3124.0
offset_bottom = 582.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_2tyta")
metadata/_edit_lock_ = true

[node name="Answer1_colors" type="ColorRect" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 1143.0
offset_top = 1097.0
offset_right = 1582.0
offset_bottom = 1509.0
color = Color(0.678431, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="Answer2_colors" type="ColorRect" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 1651.0
offset_top = 1099.0
offset_right = 2085.0
offset_bottom = 1511.0
color = Color(0.678431, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="Answer3_colors" type="ColorRect" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 2153.0
offset_top = 1100.0
offset_right = 2591.0
offset_bottom = 1512.0
color = Color(0.678431, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="Answer1" type="Button" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 1143.0
offset_top = 1098.0
offset_right = 1578.0
offset_bottom = 1511.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_wd4kb")
icon = SubResource("ViewportTexture_26cmn")
clip_text = true
metadata/_edit_lock_ = true

[node name="Answer1_label" type="Label" parent="AnimationPlayer/AnimatedScene/Answer1"]
layout_mode = 0
offset_top = -1.0
offset_right = 434.0
offset_bottom = 413.0
theme_override_fonts/font = ExtResource("3_o0fe0")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="Answer2" type="Button" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 1651.0
offset_top = 1097.0
offset_right = 2083.0
offset_bottom = 1510.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_5qagh")
clip_text = true
metadata/_edit_lock_ = true

[node name="Answer2_label" type="Label" parent="AnimationPlayer/AnimatedScene/Answer2"]
layout_mode = 0
offset_right = 435.0
offset_bottom = 412.0
theme_override_fonts/font = ExtResource("3_o0fe0")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="Answer3" type="Button" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 2156.0
offset_top = 1098.0
offset_right = 2590.0
offset_bottom = 1509.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_v7pa3")
clip_text = true
metadata/_edit_lock_ = true

[node name="Answer3_label" type="Label" parent="AnimationPlayer/AnimatedScene/Answer3"]
layout_mode = 0
offset_right = 433.0
offset_bottom = 410.0
theme_override_fonts/font = ExtResource("3_o0fe0")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="Question" type="Label" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 1075.0
offset_top = 280.0
offset_right = 2638.0
offset_bottom = 1029.0
theme_override_fonts/font = ExtResource("3_o0fe0")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="Door" type="AnimatedSprite2D" parent="AnimationPlayer/AnimatedScene"]
position = Vector2(2991, 1251.56)
scale = Vector2(0.781482, 0.781482)
sprite_frames = SubResource("SpriteFrames_i0ksj")
speed_scale = 2.0
metadata/_edit_lock_ = true

[node name="Sound_off" type="Button" parent="."]
top_level = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -254.0
offset_top = -236.0
offset_right = -146.0
offset_bottom = -128.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.5, 1.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_fabrv")
icon = ExtResource("19_juorv")

[node name="Sound_on" type="Button" parent="."]
top_level = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -254.0
offset_top = -236.0
offset_right = -146.0
offset_bottom = -128.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.5, 1.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_gx23d")
icon = ExtResource("20_173yw")

[connection signal="pressed" from="AnimationPlayer/AnimatedScene/MainMenu" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Sound_off" to="." method="_on_sound_off_pressed"]
[connection signal="pressed" from="Sound_on" to="." method="_on_sound_on_pressed"]
